<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customtv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_background"
        android:padding="5dp">

        <com.adi.exam.controls.CustomTextView
            android:id="@+id/tv_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/appupdate"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold"
            customtv:fontType="1" />

        <com.adi.exam.controls.CustomTextView
            android:id="@+id/tv_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:autoLink="web"
            android:lineSpacingExtra="5dp"
            android:lineSpacingMultiplier="1.2"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/acuiafyaycutawtuppwtu"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            customtv:fontType="1" />

        <com.adi.exam.controls.CustomTextView
            android:id="@+id/tv_updatecancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_message"
            android:layout_alignEnd="@+id/tv_message"
            android:layout_alignRight="@+id/tv_message"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bg_cancel"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/red"
            customtv:fontType="1" />

        <com.adi.exam.controls.CustomTextView
            android:id="@+id/tv_updateok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_message"
            android:layout_alignStart="@+id/tv_message"
            android:layout_alignLeft="@+id/tv_message"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bg_submit"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@android:color/white"
            customtv:fontType="1" />

    </RelativeLayout>

</RelativeLayout>
