<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:customtv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingLeft="@dimen/_60sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingRight="@dimen/_60sdp"
        android:paddingBottom="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.adi.exam.controls.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp">

                <com.adi.exam.controls.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/name"
                    android:textColor="@color/spinnergray"
                    android:textSize="18sp"
                    app:fontType="1" />

                <com.adi.exam.controls.CustomEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:longClickable="false"
                    android:singleLine="true"
                    customtv:fontType="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp">

                <com.adi.exam.controls.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/classtxt"
                    android:textColor="@color/spinnergray"
                    android:textSize="18sp"
                    app:fontType="1" />

                <com.adi.exam.controls.CustomEditText
                    android:id="@+id/et_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:longClickable="false"
                    android:singleLine="true"
                    customtv:fontType="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp">

                <com.adi.exam.controls.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/batch"
                    android:textColor="@color/spinnergray"
                    android:textSize="18sp"
                    app:fontType="1" />

                <com.adi.exam.controls.CustomEditText
                    android:id="@+id/et_branch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:enabled="false"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:longClickable="false"
                    android:singleLine="true"
                    customtv:fontType="1" />

            </LinearLayout>

            <com.adi.exam.controls.CustomTextView
                android:id="@+id/tv_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/button_bg_submit"
                android:gravity="center"
                android:text="@string/dashboard"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                customtv:fontType="1" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>