<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customtv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_background"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY" />

        <com.adi.exam.controls.CustomTextView
            android:id="@+id/tv_title"
            android:textSize="14sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:visibility="gone"
            customtv:fontType="2" />

        <com.adi.exam.controls.CustomTextView
            android:id="@+id/tv_message"
            android:textSize="12sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_icon"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:autoLink="web|email|phone"
            android:lineSpacingExtra="5dp"
            android:lineSpacingMultiplier="1.2"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            customtv:fontType="1" />

        <com.adi.exam.controls.CustomTextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_message"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg_submit"
            android:gravity="center"
            android:text="@string/ok_txt"
            android:textColor="@android:color/white"
            customtv:fontType="1" />

        <com.adi.exam.controls.CustomTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_message"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/tv_ok"
            android:layout_toLeftOf="@+id/tv_ok"
            android:background="@drawable/button_bg_cancel"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:visibility="gone"
            customtv:fontType="1" />

    </RelativeLayout>

</RelativeLayout>